# billionaire_vishaaal

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  test-plan-pr11-cinematic-intro.md  test-plan-pr6-redesigned-views.md  test-plan.md  test-report.md
.agents/skills/testing-dashboard/: SKILL.md
config/: config.yaml  strategies.yaml
scripts/: run_sample_backtest.py  zerodha_login.py
src/ai_trader/: __init__.py  app.py  cli.py  config.py
src/ai_trader/ai/: features.py  model.py  regime.py  signals.py
src/ai_trader/api/: routes.py  websocket.py
src/ai_trader/broker/: base.py  paper.py  zerodha.py
src/ai_trader/execution/: manager.py  scheduler.py
src/ai_trader/market_data/: candles.py  feed.py  instruments.py
src/ai_trader/models/: __init__.py  domain.py  options.py  scanner.py
src/ai_trader/options/: chain.py  greeks.py  pricing.py  strategies.py
src/ai_trader/risk/: manager.py  sizing.py
src/ai_trader/scanner/: equity.py  patterns.py  trend.py
src/ai_trader/storage/: database.py  schema.sql
src/ai_trader/strategy/: auto_trader.py  engine.py  indicators.py
src/billionaire/: __init__.py  app.py  cli.py  logging_setup.py  models.py  runtime.py
src/billionaire/alerts/: __init__.py  notifier.py
src/billionaire/api/: __init__.py  routes.py
src/billionaire/backtest/: __init__.py  engine.py  metrics.py  orb_backtest.py
src/billionaire/broker/: __init__.py  base.py  zerodha_client.py
src/billionaire/config/: __init__.py  settings.py
src/billionaire/execution/: __init__.py  order_manager.py  paper_broker.py
src/billionaire/marketdata/: __init__.py  candle_builder.py  historical_cache.py  historical_fetcher.py  history_seeder.py  instruments.py  watchlist.py  websocket_manager.py
src/billionaire/portfolio/: __init__.py  position_manager.py
src/billionaire/risk/: __init__.py  risk_manager.py
src/billionaire/services/: __init__.py  orb_service.py
src/billionaire/storage/: __init__.py  database.py  schema.sql
src/billionaire/strategy/: __init__.py  adaptive_regime.py  base.py  forecaster.py  indicator_engine.py  ml_signal_scorer.py  ml_training.py  options_engine.py  options_pricing.py  orb.py  orb_probability.py  signal_engine.py
src/billionaire/strategy/examples/: __init__.py  banknifty_reversal_scalp.py  equity_intraday_breakout.py  futures_trend_follow.py  nifty_momentum_breakout.py  options_premium_momentum.py
tests/: conftest.py  test_auto_trader.py  test_candle_builder.py  test_chain.py  test_equity_scanner.py  test_features.py  test_forecaster.py  test_greeks.py  test_historical_cache.py  test_history_seeder.py  test_indicators.py  test_model.py  test_options_pricing.py  test_orb_backtest.py  test_orb_futures_resolver.py  test_orb_probability.py  test_orb_service.py  test_orb_strategy.py  test_paper_broker.py  test_patterns.py  test_regime.py  test_risk_manager.py  test_signal_and_backtest.py  test_sizing.py  test_strategies.py  test_symbol_resolution.py  test_trend.py  test_watchlist.py
ui/dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/dashboard/public/intro/: ATTRIBUTIONS.md
ui/dashboard/src/: App.tsx  api.ts  index.css
ui/dashboard/src/components/: AskAI.tsx  ForecastChart.tsx  Sidebar.tsx  (+4 more)
(+15 files in other folders)
